--- a/src/styles/palettes/_index.scss
+++ b/src/styles/palettes/_index.scss
@@ -1,3 +1,4 @@
 @import "./accent.scss";
-@import "./primary.scss";
+@import "./primary-dark.scss";
+@import "./primary-light.scss";
 @import "./warn.scss";
