--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -2,7 +2,7 @@
 
 @import "../palettes/_index.scss";
 
-$ng-weather-radar-dark-primary: mat.define-palette($palette-primary);
+$ng-weather-radar-dark-primary: mat.define-palette($palette-primary-dark);
 $ng-weather-radar-dark-accent: mat.define-palette($palette-accent);
 $ng-weather-radar-dark-warn: mat.define-palette($palette-warn);
 
