--- a/src/styles/themes/light.scss
+++ b/src/styles/themes/light.scss
@@ -2,7 +2,7 @@
 
 @import "../palettes/_index.scss";
 
-$ng-weather-radar-light-primary: mat.define-palette($palette-primary);
+$ng-weather-radar-light-primary: mat.define-palette($palette-primary-light);
 $ng-weather-radar-light-accent: mat.define-palette($palette-accent);
 $ng-weather-radar-light-warn: mat.define-palette($palette-warn);
 
